VisualForcePage/src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <label>Invoice Statement</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Line Item</relationshipLabel>
        <relationshipName>Line_Item</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise_Name__c</fullName>
        <label>Merchandise</label>
        <referenceTo>X3_Merchandise__c</referenceTo>
        <relationshipLabel>Line Item</relationshipLabel>
        <relationshipName>Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_solid__c</fullName>
        <label>Unit solid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unit_price__c</fullName>
        <label>unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line Item  Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>